<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="look_at_my_gui">Look at my GUI</string>
    <string name="click_here">Click Here</string>
    <string name="switch_on_off">Switch ON/OFF</string>
    <string name="type_here">Type here...</string>
    <string name="toast_message" translatable="false">Button clicked!</string>
    <string name="check_this_out">Check this out!</string>


</resources>
